--- a/backend/app/templates/register.html
+++ b/backend/app/templates/register.html
@@ -113,6 +113,7 @@
                         Confirm Password
                     </label>
                     <input
+                        data-testid="input-confirm-password"
                         type="password"
                         id="confirm_password"
                         name="confirm_password"
